[gd_scene load_steps=15 format=3 uid="uid://eecv28y6jxk4"]

[ext_resource type="PackedScene" uid="uid://clc5dre31iskm" path="res://addons/godot-xr-tools/xr/start_xr.tscn" id="1_i4c04"]
[ext_resource type="Script" path="res://content/main.gd" id="1_uvrd4"]
[ext_resource type="PackedScene" uid="uid://b30w6tywfj4fp" path="res://content/system/controller_left/controller_left.tscn" id="2_2lraw"]
[ext_resource type="Environment" uid="uid://cfm0g4r0h2n1p" path="res://assets/environment.tres" id="2_lsndp"]
[ext_resource type="PackedScene" uid="uid://b2kjh1fpjptdr" path="res://content/system/camera/camera.tscn" id="3_rj4ac"]
[ext_resource type="PackedScene" uid="uid://ctltchlf2j2r4" path="res://addons/xr-simulator/XRSimulator.tscn" id="5_3qc8g"]
[ext_resource type="PackedScene" uid="uid://biu66ihmvmku3" path="res://content/system/controller_right/controller_right.tscn" id="7_0b3tc"]
[ext_resource type="PackedScene" uid="uid://c3kdssrmv84kv" path="res://content/ui/menu/menu.tscn" id="8_du83w"]
[ext_resource type="PackedScene" uid="uid://cbemihbxkd4ll" path="res://content/system/house/house.tscn" id="9_np6mw"]
[ext_resource type="Script" path="res://lib/utils/screenshot.gd" id="12_e13ym"]
[ext_resource type="PackedScene" uid="uid://ds60i5n211hi3" path="res://content/system/miniature/miniature.tscn" id="12_lmxhs"]
[ext_resource type="PackedScene" uid="uid://bhyddd1f0ry1x" path="res://content/ui/onboarding/onboarding.tscn" id="12_uq2nj"]
[ext_resource type="PackedScene" uid="uid://lrehk38exd5n" path="res://content/system/keyboard/keyboard.tscn" id="13_kylpi"]
[ext_resource type="PackedScene" uid="uid://beafp6nhhcxaf" path="res://content/system/areas/areas.tscn" id="14_0s0u7"]

[node name="Main" type="Node3D"]
script = ExtResource("1_uvrd4")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = ExtResource("2_lsndp")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, -2.51787e-05, 0.000567105, -0.000567105, 4.3985e-08, 1, -2.51784e-05, -1, 2.97105e-08, -4.65661e-10, 7.21041, 2.06458)
shadow_enabled = true
directional_shadow_split_1 = 0.2
directional_shadow_split_2 = 0.4
directional_shadow_split_3 = 0.6
directional_shadow_blend_splits = true
directional_shadow_max_distance = 5.0

[node name="StartXR" parent="." instance=ExtResource("1_i4c04")]
render_target_size_multiplier = 1.3
enable_passthrough = true

[node name="XROrigin3D" type="XROrigin3D" parent="."]

[node name="XRCamera3D" parent="XROrigin3D" instance=ExtResource("3_rj4ac")]
unique_name_in_owner = true

[node name="XRControllerLeft" parent="XROrigin3D" instance=ExtResource("2_2lraw")]
unique_name_in_owner = true
transform = Transform3D(0.999999, -1.39633e-11, 0, 9.48075e-12, 1, 0, 0, 0, 1, -0.355145, 0.550439, -0.477945)

[node name="XRControllerRight" parent="XROrigin3D" instance=ExtResource("7_0b3tc")]
unique_name_in_owner = true
transform = Transform3D(0.999999, -1.39635e-11, 0, 1.31553e-10, 1, 0, 0, 0, 1, 0.336726, 0.575093, -0.437942)

[node name="XRSimulator" parent="." instance=ExtResource("5_3qc8g")]
disable_xr_in_editor = false
min_camera_height = 0.01
xr_origin = NodePath("../XROrigin3D")

[node name="House" parent="." instance=ExtResource("9_np6mw")]

[node name="Miniature" parent="." instance=ExtResource("12_lmxhs")]

[node name="Menu" parent="." instance=ExtResource("8_du83w")]
transform = Transform3D(0.999999, -1.39633e-11, 0, 1.60657e-10, 1, -4.54747e-13, 0, 0, 0.999999, -0.0165677, 0.766337, -0.634317)

[node name="Onboarding" parent="." instance=ExtResource("12_uq2nj")]
transform = Transform3D(1, -1.39636e-11, 0, 4.42413e-11, 1, 0, 0, 0, 1, -0.576793, 0.820168, -0.60016)

[node name="Screenshot" type="Node" parent="."]
script = ExtResource("12_e13ym")

[node name="Keyboard" parent="." instance=ExtResource("13_kylpi")]
transform = Transform3D(0.5, 0, 0, 0, 0.237697, 0.439887, 0, -0.439887, 0.237697, -0.0241798, 0.452996, -0.531271)

[node name="Areas" parent="." instance=ExtResource("14_0s0u7")]
